--- a/Part three- more if else, boolean, etc/More if-else, Boolean variables, File Writing, Defining functions, Lists, Loops.ipynb
+++ b/Part three- more if else, boolean, etc/More if-else, Boolean variables, File Writing, Defining functions, Lists, Loops.ipynb
@@ -28,6 +28,8 @@
    "source": [
     "# EXAMPLE 1a: Flawed Grades, Version 1\n",
     "\n",
+    "\n",
+    "\n",
     "score = float(input('Enter score: '))\n",
     "\n",
     "if score >= 90:\n",
@@ -752,9 +754,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The max is 9\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE 10a: my_max\n",
     "\n",
@@ -767,8 +777,15 @@
     "\n",
     "#\n",
     "# Let's use my_max to assign z the max of x and y.\n",
-    "#\n",
-    "\n",
+    "def my_max(x,y):\n",
+    "    if x > y: \n",
+    "        z = x\n",
+    "    elif y > x:\n",
+    "        z= y\n",
+    "    elif x == y:\n",
+    "        z = 'Neither they are the same'\n",
+    "    return z    # comment: \n",
+    "z = my_max(x,y)\n",
     "print('The max is', z)"
    ]
   },
@@ -784,16 +801,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "0\n",
+      "If this isn't 2, your function has a problem : 2\n",
+      "If this isn't 4, your function has a problem : 4\n",
+      "If this isn't 0, your function has a problem : 0\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE 10b: my_abs\n",
     "\n",
     "#\n",
     "# Write my_abs()\n",
     "# \n",
-    "\n",
+    "def my_abs(x):\n",
+    "    return -x if x < 0 else x\n",
+    "print(my_abs(2))\n",
+    "print(my_abs(-4))\n",
+    "print(my_abs(0))\n",
     "print('If this isn\\'t 2, your function has a problem :', my_abs(2))\n",
     "print('If this isn\\'t 4, your function has a problem :', my_abs(-4))\n",
     "print('If this isn\\'t 0, your function has a problem :', my_abs(0))"
@@ -1061,15 +1095,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd']\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE 13b: Delete\n",
     "\n",
     "x = ['a', 'b', 'x', 'c', 'd', 'x']\n",
     "\n",
-    "# Let's remove the 'x's:\n"
+    "# Let's remove the 'x's:\n",
+    "for i in x:\n",
+    "    if i == 'x':\n",
+    "        x.remove(i)\n",
+    "print(x)"
    ]
   },
   {
@@ -1128,9 +1174,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['An', 'archipelago', 'is...a', 'group', 'of', 'islands!']\n",
+      "['Got', 'some', 'newlines']\n",
+      "['Big', 'Multi', 'Line']\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE 15a: .split()\n",
     "\n",
@@ -1211,13 +1267,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0 / 8.0 is equal to 0.75\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE 16a: Calculator\n",
     "\n",
     "expression = input('Enter an expression: ')\n",
+    "sp= expression.split()\n",
+    "fl1 =float(sp[0])\n",
+    "fl2 = float(sp[2])\n",
+    "operand = sp[1]\n",
+    "if operand == '+':\n",
+    "    result = fl1 + fl2\n",
+    "elif operand == '-':\n",
+    "    result = fl1 - fl2\n",
+    "elif operand == '/':\n",
+    "    result = fl1 / fl2\n",
+    "elif operand == '*':\n",
+    "    result = fl1 * fl2\n",
+    "print(f'{fl1} {operand} {fl2} is equal to {result}')    \n",
     "\n",
     "#\n",
     "# LET'S WRITE A CALCULATOR!\n",
@@ -1247,7 +1324,8 @@
     "running_sum = 0\n",
     "for n in range(1, 10**6 + 1):\n",
     "    running_sum = running_sum + n\n",
-    "print(running_sum)"
+    "    print(running_sum)\n",
+    "print(running_sum)\n"
    ]
   },
   {
@@ -1427,17 +1505,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple\n",
+      "Ball\n",
+      "Animal\n",
+      "Bell\n",
+      "Band\n",
+      "Carrot\n",
+      "Angry\n",
+      "Banana\n",
+      "Bear\n",
+      "Attic\n",
+      "Candle\n",
+      "Cup\n",
+      "Beware\n",
+      "Words that start with B\n",
+      "Ball\n",
+      "Bell\n",
+      "Band\n",
+      "Banana\n",
+      "Bear\n",
+      "Beware\n"
+     ]
+    }
+   ],
    "source": [
     "# EXAMPLE 18a: B Words\n",
     "\n",
     "word_list = ['Apple', 'Ball', 'Animal', 'Bell', 'Band', 'Carrot', 'Angry', 'Banana', 'Bear', 'Attic', 'Candle', 'Cup', 'Beware']\n",
     "\n",
     "# Print out every word, as above\n",
+    "for w in word_list:\n",
+    "    print(w)\n",
     "\n",
-    "\n",
+    "print('Words that start with B')\n",
+    "for w in word_list:\n",
+    "    if w[0] == 'B':\n",
+    "        print(w)\n",
     "\n",
     "\n",
     "\n",
